# busca-binaria-em-c

./: .gitignore  CMakeLists.txt  README.md  a.txt  first.txt  lets.txt  main.c  ok.txt  score.txt  testes.depend  testes.layout
