cmake_minimum_required(VERSION 3.10)
project(APS C)

set(CMAKE_C_STANDARD 11)

add_executable(APS
    bin/Debug/testes.exe
    obj/Debug/main.o
    a.txt
    darth.txt
    first.txt
    lets.txt
    main.c
    main.exe
    main.o
    ok.txt
    score.txt
    second.txt
    start.txt
    testes.cbp
    testes.depend
    testes.layout)
